--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -11,18 +11,21 @@ jobs:
     steps:
       - name: stage1 step(1)
         run: echo "stage1"
-      - name: stage1 step(2)
-        run: echo "stage2"
-  stage2:
+
+  rollback:
     runs-on: ubuntu-latest
     needs: stage1
     steps:
-      - name: stage2 step(1)
-        run: echo "test success stage2 ver."
-  stage3:
-    runs-on: ubuntu-latest
-    needs: [ stage1, stage2 ]
-    if: ${{ always() && contains(needs.*.result, 'failure') }}
-    steps:
-      - name: Stage3 in the case of 'failure'
-        run: echo "failure stage executed"
+      - name: Fetch Latest Release
+        id: latest-release
+        uses: thebritican/fetch-latest-release@v1.0.3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Checkout Latest Release source code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ steps.latest-release.outputs.tag-name }}
+
+      - name: Debugging
+        run: echo ${{ steps.latest-release.outputs.tag-name }}
