--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -11,7 +11,11 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
-
+      - name: Test
+        run: |
+          echo "$(git describe --abbrev=0 --tags)"
+          echo "$(git describe --tags `git rev-list --tags --max-count=1`)"
+          echo "${git describe --tags `git rev-list --tags --max-count=1`}"
       - name: Fetch Latest Tag
         id: fetch-tag
         run: |
