--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -9,22 +9,20 @@ jobs:
   rollback:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          echo "fuc"
+
+          ARGS=$(git log --oneline -1 --format="%s")
+          echo "$ARGS"
+          echo $ARGS
+
+          echo "$(git log --oneline -1 --format="%s")"
+
+          echo "$(git rev-list --tags --max-count=1)"
+          echo "$(git describe --tags `git rev-list --tags --max-count=1`)"
+          
       - name: Checkout source code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Fetch Latest Release
-        id: latest-release
-        uses: thebritican/fetch-latest-release@v1.0.3
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - run: echo "${{ steps.latest-release.outputs.tag-name }}"
-
-      - name: Checkout Latest Release source code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          ref: ${{ steps.latest-release.outputs.tag-name }}
-
+          ref: $(git describe --tags `git rev-list --tags --max-count=1`)
