--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -9,19 +9,21 @@ jobs:
   rollback:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v3
+      - id: latest
+        uses: thebritican/fetch-latest-release@v1.0.3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Echo Step1
+        run: |
+          echo ${{ steps.latest.outputs.tag_name }}
+
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: ${{ steps.latest.outputs.tag_name }}
 
-      - run: |
-          echo "fuc"
-
-          ARGS=$(git log --oneline -1 --format="%s")
-          echo "$ARGS"
-          echo $ARGS
-
-          echo "$(git log --oneline -1 --format="%s")"
-
+      - name: Echo Step2
+        run: |
           echo "$(git rev-list --tags --max-count=1)"
           echo "$(git describe --tags `git rev-list --tags --max-count=1`)"
