--- a/.github/workflows/new-workflow.yml
+++ b/.github/workflows/new-workflow.yml
@@ -3,8 +3,34 @@ name: New Workflow
 on: [pull_request]
 
 jobs:
-  new:
+  rollback:
     runs-on: ubuntu-latest
     steps:
-      - name: Step1
-        run: echo "step1"
+      - name: Fetch Latest Release
+        id: fetch-latest
+        uses: thebritican/fetch-latest-release@v1.0.3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      
+      - run: echo ${{ steps.fetch-latest.outputs.tag_name }}
+
+      - name: Checkout Latest Release source code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: ${{ steps.fetch-latest.outputs.tag_name }}
+
+  tagging:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Extract version
+        run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+        id: extract-version
+
+      - name: Create Release with Tag
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.extract_version_name.outputs.version }}
+          release_name: ${{ steps.extract_version_name.outputs.version }}
