--- a/.github/workflows/new-workflow.yml
+++ b/.github/workflows/new-workflow.yml
@@ -24,8 +24,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Extract version
-        run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+        run: echo "##[set-output name=version;]$(echo '${{ github.event.pull_request.title }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
         id: extract-version
+
+      - run: |
+          echo "${{ steps.extract-version.outputs.version }}"
+          echo '${{ github.event.pull_request.title }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}'
 
       - name: Create Release with Tag
         uses: actions/create-release@v1
