--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -22,7 +22,7 @@ jobs:
           if [ -z $version ]; then
             exit 1
           else
-            echo "::set-output name=version:$version"
+            echo "::set-output name=version::$version"
           fi
         id: extract-version
 
