--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -34,13 +34,13 @@ jobs:
       - name: Auto Generate Changelog
         run: |
           python change.py --version "${{ steps.extract-version.outputs.version }}"
-          echo ::set-output name=content::$(cat ./CHANGELOG_RELEASE.md)
+          
 
           RELEASEBODY=$(awk -v RS='Release ' '/'$VERSION':(.*)/ {print $0}' CHANGELOG_RELEASE.md)
           RELEASEBODY="${RELEASEBODY//'%'/'%25'}"
           RELEASEBODY="${RELEASEBODY//$'\n'/'%0A'}"
           RELEASEBODY="${RELEASEBODY//$'\r'/'%0D'}"  
-          echo "$RELEASEBODY"
+          echo ::set-output name=content::$RELEASEBODY
         id: changelog
 
       - name: Create Release with Tag
