--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -52,4 +52,6 @@ jobs:
           release_name: ${{ steps.extract-version.outputs.version }}
           body: |
             ${{ steps.changelog.outputs.content }}
+          draft: false
+  
           
