--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -44,11 +44,8 @@ jobs:
         id: changelog
 
       - name: Create Release with Tag
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ steps.extract-version.outputs.version }}
-          release_name: ${{ steps.extract-version.outputs.version }}
-          body_render_type:  markdown # rst and markdown support 
-          body_render_path:  ./CHANGELOG_RELEASE.md
+          name: ${{ steps.extract-version.outputs.version }}
+          tag: ${{ steps.extract-version.outputs.version }}
+          bodyFile: "./CHANGELOG_RELEASE.md"
