--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -6,7 +6,14 @@ jobs:
   tagging:
     runs-on: ubuntu-latest
     steps:
+      - name: First
+        id: first
+        run: |
+          version=$(echo '${{ github.event.pull_request.title }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')
+          echo "::set-output name=version::$version"
+
       - name: Test
+        if: ${{ steps.first.outputs.version }}
         run: |
           echo ${{ github.base_ref }}
           echo ${{ github.ref }}
