--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -10,6 +10,6 @@ jobs:
         run: |
           echo ${{ github.base_ref }}
           echo ${{ github.ref }}          
-          echo ${{ github.head_ref }}
           echo ${{ github.ref_name }}
-          echo ${{ github.ref_type }}
+          echo $(git rev-parse --abbrev-ref HEAD)
+          echo $(git rev-parse --abbrev-ref HEAD~1)
