--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -8,15 +8,17 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
-      - name: Test
+
+      - name: Test Github variables
         run: |
           echo ${{ github.base_ref }}
           echo ${{ github.ref }}          
           echo ${{ github.ref_name }}
           echo ${{ github.head_ref }}
 
-          echo "$(git rev-parse --abbrev-ref HEAD)"
-
-          REV=$(git rev-list --tags --skip=1 --max-count=1)
-          echo $REV
-          echo "$(git describe --abbrev=0 --tags $REV)"
+      - name: Run Test Script
+        run: |
+          TAGS_LIST=($(python3 script.py))
+          echo "$TAGS_LIST[0]"
+          echo "$TAGS_LIST[1]"
+          echo "$TAGS_LIST[2]"
