fix if statements

--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -23,12 +23,11 @@ jobs:
       
       - name: Get Changed Files
         id: changed-files
-        if: ${{ steps.extract-version.outputs.version }}
         uses: tj-actions/changed-files@v31
 
       - name: Auto Commit Updated Changelog
         id: auto-commit-push
-        if: ${{ steps.changed-files.outputs.any_changed }} && ${{ steps.extract-version.outputs.version }}
+        if: ${{ steps.changed-files.outputs.any_changed }}
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "update: CHANGELOG.md"
