--- a/.github/workflows/sample-worflow.yml
+++ b/.github/workflows/sample-worflow.yml
@@ -10,11 +10,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Test Github variables
+        id: test
         run: |
-          echo ${{ github.base_ref }}
-          echo ${{ github.ref }}          
-          echo ${{ github.ref_name }}
-          echo ${{ github.head_ref }}
           echo ${{ github.event.action == 'closed' }}
           echo ${{ github.event.pull_request.merged }}
-          echo (github.event.pull_request.merged)
+
+      - name: Condition Check
+        if: $ {{ github.event.action != 'closed' && {{ steps.test.outputs.version }} }}
+        run: |
+          echo ${{ github.event.action == 'closed' }}
+          echo ${{ github.event.pull_request.merged }}
+
